--- a/android/gradle/libs.versions.toml
+++ b/android/gradle/libs.versions.toml
@@ -17,6 +17,7 @@ okhttp = "5.3.2"
 retrofit = "2.9.0"
 runtime = "1.10.0"
 room = "2.6.1"
+coil = "2.5.0"
 litertSupportApi = "1.4.1"
 
 [libraries]
@@ -48,6 +49,7 @@ androidx-compose-runtime = { group = "androidx.compose.runtime", name = "runtime
 androidx-room-runtime = { group = "androidx.room", name = "room-runtime", version.ref = "room" }
 androidx-room-ktx = { group = "androidx.room", name = "room-ktx", version.ref = "room" }
 androidx-room-compiler = { group = "androidx.room", name = "room-compiler", version.ref = "room" }
+coil-compose = { module = "io.coil-kt:coil-compose", version.ref = "coil" }
 litert-support-api = { group = "com.google.ai.edge.litert", name = "litert-support-api", version.ref = "litertSupportApi" }
 
 [plugins]
